# esp-box-emu

./: .gitignore
components/box-emu-hal/include/: box.hpp  box_3.hpp  box_emu_hal.hpp  emu_base.hpp  emu_v0.hpp  emu_v1.hpp  input_state.hpp  touchpad_data.hpp
components/box-emu-hal/src/: battery.cpp  emu_base.cpp  i2s_audio.cpp  input.cpp  spi_lcd.cpp
components/nes/: CMakeLists.txt
components/nes/common/: util.h
components/nes/knes/: NES.cpp  NES.h  memory.cpp
components/nes/nes/: nes.cpp  nes.h
components/nes/nes/cartridge/: parse_rom.cpp  parse_rom.h  rom_file.h
components/nes/nes/generic/rom/: rom.cpp  rom.h
components/nes/nes/joy/: joy.cpp  joy.h
components/nes/nes/ppu/: ppu.cpp  ppu.h
components/nes/src/: nes.cpp
